<resources>
    <string name="app_name">DialogFragmant_Demo</string>
    <string name="rate_me">Rate Me</string>
    <string name="rating">Your Ratting Matters</string>
    <string name="excellent">Excellent</string>
    <string name="good">Good</string>
    <string name="very_good">Very Good</string>
    <string name="bad">Bad</string>
    <string name="very_bad">Very Bad</string>
    <string name="ok">Ok</string>
    <string name="cancle">Cancle</string>
</resources>